# XAI_Dash

./: README.md  pyproject.toml  start_dashboard.py
app/: __init__.py  config.py
app/api/: main.py
app/explainers/: __init__.py  model_agnostic.py
app/models/: __init__.py  model_manager.py
app/ui/: advanced_dashboard.py
data/models/: breast_cancer_classifier.pkl  breast_cancer_classifier_info.pkl  customer_value_classifier.pkl  customer_value_classifier_info.pkl  house_price_regressor_info.pkl  iris_classifier_info.pkl  my_iris_model.pkl  my_iris_model_info.pkl  wine_classifier.pkl  wine_classifier_info.pkl
uploaded_models/: Test.joblib  dropdown_test.joblib  models_metadata.json  test_model.joblib
